<resources>
    <string name="app_name">Quizzhub</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="valider">valider</string>
    <string name="lastname">Last name</string>
    <string name="user_name">user name</string>
    <string name="ed_email">Email</string>
    <string name="ed_password">Password</string>
    <string name="bt_connexion">connexion</string>
    <string name="bt_inscription">Inscription</string>
    <string name="title_activity_inscription">inscription</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_Logout">Deconnexion</string>
    <string name="facebook_app_id">267533550298864</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
