<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="web.afor.innovation.quizzhub.Activities.inscription"
    tools:showIn="@layout/inscription">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_centerInParent="true"/>
    <EditText
        android:id="@+id/ed_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/user_name"></EditText>

    <EditText
        android:id="@+id/t_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ed_email"
        android:layout_marginTop="8dp"/>
    <EditText
        android:id="@+id/t_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/ed_password"
        android:layout_marginTop="8dp"/>


    <Button
        android:onClick="inscription"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@drawable/register"/>


</LinearLayout>
